force-app/main/default/objects/Applicant__c/fields/Aadhar_Card__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card__c</fullName>
    <label>Aadhar Card</label>
    <length>12</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>