force-app/main/default/objects/Applicant__c/fields/Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type__c</fullName>
    <formula>IF(  Age__c &gt;= 18, &apos;Major&apos;, &apos;Minor&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Type</label>
    <type>Text</type>
</CustomField>