force-app/main/default/objects/Applicant__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <formula>IF(  Age__c &gt;=18 ,   

IMAGE(&apos;https://starhealthinsurance61-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0155h000001aDIP&amp;oid=00D5h0000094Kc3&amp;lastMod=1703041312000&apos;,&apos;Any Name&apos;,30,30) , 



IMAGE(&apos;https://starhealthinsurance61-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0155h000001aDIU&amp;oid=00D5h0000094Kc3&amp;lastMod=1703041401000&apos;,&apos;Any Name&apos;,30,30 ) 



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility</label>
    <type>Text</type>
</CustomField>