force-app/main/default/objects/Applicant__c/fields/Eligible_for_Voting__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Voting__c</fullName>
    <formula>IF(  Age__c &gt;=18 , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Voting</label>
    <type>Checkbox</type>
</CustomField>