force-app/main/default/objects/Applicant__c/fields/Reference_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Reference_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>