force-app/main/default/objects/Applicant__c/fields/Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance__c</fullName>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>