force-app/main/default/objects/Applicant__c/fields/X05_Min_After_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>X05_Min_After_Created_Date_Time__c</fullName>
    <formula>CreatedDate + 0.00345</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>05 Min After Created Date Time</label>
    <type>DateTime</type>
</CustomField>