force-app/main/default/objects/Applicant__c/validationRules/Prevent_Applicant_Age_less_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Applicant_Age_less_than_18</fullName>
    <active>false</active>
    <errorConditionFormula>Age__c &lt; 18  &amp;&amp;  ISPICKVAL( Gender__c , &apos;Male&apos;)</errorConditionFormula>
    <errorMessage>Age must be greater or equals to 18 for Male Applicant.</errorMessage>
</ValidationRule>