force-app/main/default/objects/Applicant__c/validationRules/Prevent_Blank_Aadhar_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Blank_Aadhar_Card</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Aadhar_Card__c ) &amp;&amp;  $Profile.Name = &apos;Customer Care&apos;</errorConditionFormula>
    <errorDisplayField>Aadhar_Card__c</errorDisplayField>
    <errorMessage>Aadhar Card should not be empty for customer care users.</errorMessage>
</ValidationRule>