force-app/main/default/objects/Applicant__c/validationRules/Prevent_Invalid_Pan_Card_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Invalid_Pan_Card_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX(  Pan_Card__c  , &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;) )</errorConditionFormula>
    <errorDisplayField>Pan_Card__c</errorDisplayField>
    <errorMessage>Invalid Pan Card Number</errorMessage>
</ValidationRule>