force-app/main/default/objects/Applicant__c/listViews/Applicant_Details.listView-meta.xml
<ListView>
    <fullName>Applicant_Details</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>Police_Verification__c</columns>
    <filterScope>Mine</filterScope>
    <label>Applicant Details</label>
</ListView>